# qwen3-asr-realtime-cli

./: Cargo.toml  README.md
examples/: index.html  start.sh
src/: main.rs
